add opentsdb metric
Change-Id: Ic791f8ea6df7e19c7cb7819355491ef2e7d357af

(cherry picked from commit 6b97d6f)

--- a/flink-dist/pom.xml
+++ b/flink-dist/pom.xml
@@ -102,7 +102,7 @@ under the License.
 			<artifactId>flink-metrics-jmx_${scala.binary.version}</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-        
+
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-mesos_${scala.binary.version}</artifactId>
@@ -215,6 +215,13 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-metrics-dropwizard</artifactId>
+			<version>${project.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.flink</groupId>
+			<artifactId>flink-metrics-opentsdb</artifactId>
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
@@ -370,6 +377,24 @@ under the License.
 			<artifactId>flink-test-utils-junit</artifactId>
 		</dependency>
 		<!-- end test dependencies -->
+
+		<dependency>
+			<groupId>com.alibaba.jstorm</groupId>
+			<artifactId>jstorm-core</artifactId>
+			<version>2.2.1-flink-SNAPSHOT</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.bytedance.storm.serializer</groupId>
+			<artifactId>storm-serializer</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<profiles>
