flink 原生作业添加dashboard监控
Change-Id: I280443ffba6ed7da93f748a286db2bfa4bb80e21

(cherry picked from commit 6e5cd11)

--- a/flink-connectors/flink-connector-kafka-0.10/pom.xml
+++ b/flink-connectors/flink-connector-kafka-0.10/pom.xml
@@ -95,6 +95,12 @@ under the License.
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+
 		<!-- test dependencies -->
 
 		<dependency>
