--- a/flink-connectors/flink-connector-kafka-0.10/pom.xml
+++ b/flink-connectors/flink-connector-kafka-0.10/pom.xml
@@ -40,6 +40,17 @@ under the License.
 		<kafka.version>0.10.2.1</kafka.version>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+			<id>bytedance-releases</id>
+			<url>https://maven.byted.org/repository/releases</url>
+		</repository>
+		<snapshotRepository>
+			<id>bytedance-snapshots</id>
+			<url>https://maven.byted.org/repository/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<dependencies>
 
 		<!-- core dependencies -->
@@ -208,6 +219,24 @@ under the License.
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>2.4.1</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<artifactSet>
+								<excludes combine.self="override"></excludes>
+							</artifactSet>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
