--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@ under the License.
 
 	<modelVersion>4.0.0</modelVersion>
 
+        <distributionManagement>
+            <repository>
+            <id>bytedance-releases</id>
+            <url>https://maven.byted.org/repository/releases</url>
+          </repository>
+          <snapshotRepository>
+            <id>bytedance-snapshots</id>
+            <url>https://maven.byted.org/repository/snapshots</url>
+          </snapshotRepository>
+        </distributionManagement>
+
 	<groupId>org.apache.flink</groupId>
 	<artifactId>flink-parent</artifactId>
 	<version>1.9-SNAPSHOT</version>
