--- a/tools/force-shading/pom.xml
+++ b/tools/force-shading/pom.xml
@@ -21,6 +21,16 @@ under the License.
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
+        <distributionManagement>
+            <repository>
+            <id>bytedance-releases</id>
+            <url>https://maven.byted.org/repository/releases</url>
+          </repository>
+          <snapshotRepository>
+            <id>bytedance-snapshots</id>
+            <url>https://maven.byted.org/repository/snapshots</url>
+          </snapshotRepository>
+        </distributionManagement>
 
 	<parent>
 		<groupId>org.apache</groupId>
