--- a/flink-metrics/flink-metrics-core/pom.xml
+++ b/flink-metrics/flink-metrics-core/pom.xml
@@ -31,6 +31,13 @@ under the License.
 
 	<artifactId>flink-metrics-core</artifactId>
 	<name>flink-metrics-core</name>
+	<dependencies>
+		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>${metrics.version}</version>
+		</dependency>
+	</dependencies>
 
 	<packaging>jar</packaging>
 
