--- a/flink-metrics/flink-metrics-opentsdb/pom.xml
+++ b/flink-metrics/flink-metrics-opentsdb/pom.xml
@@ -23,7 +23,7 @@ under the License.
 	<parent>
 		<artifactId>flink-metrics</artifactId>
 		<groupId>org.apache.flink</groupId>
-		<version>1.3.2</version>
+		<version>1.9-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
@@ -43,6 +43,11 @@ under the License.
 			<groupId>com.bytedance</groupId>
 			<artifactId>metrics4j</artifactId>
 			<version>${metrics4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.dropwizard.metrics</groupId>
+			<artifactId>metrics-core</artifactId>
+			<version>${metrics.version}</version>
 		</dependency>
 	</dependencies>
 
