--- a/flink-streaming-java/pom.xml
+++ b/flink-streaming-java/pom.xml
@@ -118,9 +118,9 @@ under the License.
 		</dependency>
 
 		<dependency>
-			<groupId>com.codahale.metrics</groupId>
+			<groupId>io.dropwizard.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
-			<version>3.0.1</version>
+			<version>${metrics.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
