--- a/flink-contrib/flink-python-byted/pom.xml
+++ b/flink-contrib/flink-python-byted/pom.xml
@@ -35,7 +35,7 @@ under the License.
 
 	<properties>
 		<fastjson.version>1.2.49</fastjson.version>
-		<kafka.client.version>0.10.1.2-bd1.4</kafka.client.version>
+		<kafka.client.version>0.10.1.2-bd1.4-SNAPSHOT</kafka.client.version>
 		<msgpack.version>0.6.12</msgpack.version>
 		<snakeyaml.version>1.11</snakeyaml.version>
 		<process.tree.version>0.9.6</process.tree.version>
