--- a/flink-yarn/pom.xml
+++ b/flink-yarn/pom.xml
@@ -104,6 +104,12 @@ under the License.
 			<type>test-jar</type>
 			<version>${hadoop.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson.version}</version>
+		</dependency>
 	</dependencies>
 
 	<profiles>
