--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,7 @@ under the License.
 		<powermock.version>2.0.0-RC.4</powermock.version>
 		<hamcrest.version>1.3</hamcrest.version>
 		<py4j.version>0.10.8.1</py4j.version>
+		<fastjson.version>1.2.49</fastjson.version>
 		<snakeyaml.version>1.19</snakeyaml.version>
 		<japicmp.skip>false</japicmp.skip>
 		<flink.convergence.phase>validate</flink.convergence.phase>
