Change hadoop version to 2.6.0-cdh5.4.4-bd11

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,8 @@ under the License.
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<hadoop.version>2.4.1</hadoop.version>
+		<hadoop.version>2.6.0-cdh5.4.4-bd11</hadoop.version>
+		<hadoop.shaded.version>2.4.1</hadoop.shaded.version>
 		<!-- Need to use a user property here because the surefire
 			 forkCount is not exposed as a property. With this we can set
 			 it on the "mvn" commandline in travis. -->
@@ -1031,7 +1032,7 @@ under the License.
 				with appropriate values.
 			-->
 			<properties>
-				<hadoop.version>2.7.0-mapr-1607</hadoop.version>
+				<hadoop.version>2.6.0-cdh5.4.4-bd24</hadoop.version>
 				<zookeeper.version>3.4.5-mapr-1604</zookeeper.version>
 			</properties>
 
