--- a/flink-connectors/flink-hbase/pom.xml
+++ b/flink-connectors/flink-hbase/pom.xml
@@ -111,7 +111,7 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-shaded-hadoop-2</artifactId>
-			<version>${hadoop.version}-${flink.shaded.version}</version>
+			<version>${hadoop.shaded.version}-${flink.shaded.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -307,10 +307,10 @@ under the License.
 			</activation>
 			<properties>
 				<hbase.version>0.98.1-cdh5.1.3</hbase.version>
-				<hadoop.version>2.3.0-cdh5.1.3</hadoop.version>
+				<version>1.9-byted-SNAPSHOT</version>
 				<!-- Cloudera use different versions for hadoop core and commons-->
 				<!-- This profile could be removed if Cloudera fix this mismatch! -->
-				<hadoop.core.version>2.3.0-mr1-cdh5.1.3</hadoop.core.version>
+				<hadoop.core.version>2.6.0-cdh5.4.4-bd24</hadoop.core.version>
 			</properties>
 			<dependencyManagement>
 				<dependencies>
