--- a/flink-runtime/pom.xml
+++ b/flink-runtime/pom.xml
@@ -70,7 +70,7 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-shaded-hadoop-2</artifactId>
-			<version>${hadoop.version}-${flink.shaded.version}</version>
+			<version>${hadoop.shaded.version}-${flink.shaded.version}</version>
 			<optional>true</optional>
 		</dependency>
 
