--- a/flink-tests/pom.xml
+++ b/flink-tests/pom.xml
@@ -55,7 +55,7 @@ under the License.
 		<dependency>
 			<groupId>org.apache.flink</groupId>
 			<artifactId>flink-shaded-hadoop-2</artifactId>
-			<version>${hadoop.version}-${flink.shaded.version}</version>
+			<version>${hadoop.shaded.version}-${flink.shaded.version}</version>
 			<scope>test</scope>
 		</dependency>
 
