--- a/flink-core/pom.xml
+++ b/flink-core/pom.xml
@@ -134,6 +134,12 @@ under the License.
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snakeyaml.version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
