--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@ under the License.
 		<hivemetastore.hadoop.version>2.7.5</hivemetastore.hadoop.version>
 		<jamicmp.referenceVersion>1.8.0</jamicmp.referenceVersion>
 		<japicmp.outputDir>tools/japicmp-output</japicmp.outputDir>
+		<snakeyaml.version>1.11</snakeyaml.version>
 	</properties>
 
 	<dependencies>
