--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,7 @@ under the License.
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<hadoop.version>2.6.0-cdh5.4.4-bd11</hadoop.version>
+		<hadoop.version>2.6.0-cdh5.4.4-bd26</hadoop.version>
 		<!-- Need to use a user property here because the surefire
 			 forkCount is not exposed as a property. With this we can set
 			 it on the "mvn" commandline in travis. -->
@@ -112,7 +112,7 @@ under the License.
 		<flink.forkCountTestPackage>${flink.forkCount}</flink.forkCountTestPackage>
 		<flink.reuseForks>true</flink.reuseForks>
 		<log4j.configuration>log4j-test.properties</log4j.configuration>
-		<flink.shaded.version>7.0</flink.shaded.version>
+		<flink.shaded.version>8.0-byted-SNAPSHOT</flink.shaded.version>
 		<guava.version>18.0</guava.version>
 		<akka.version>2.5.21</akka.version>
 		<java.version>1.8</java.version>
@@ -1045,7 +1045,7 @@ under the License.
 				with appropriate values.
 			-->
 			<properties>
-				<hadoop.version>2.6.0-cdh5.4.4-bd24</hadoop.version>
+				<hadoop.version>2.6.0-cdh5.4.4-bd26</hadoop.version>
 				<zookeeper.version>3.4.5-mapr-1604</zookeeper.version>
 			</properties>
 
