[FLINK-13504][table] Fixed shading issues in table modules.
Properly include the flink-sql-parser into flink-planner* modules shaded
jars. Removed the flink-sql-parser module from flink-table-uber* jars as
it is already included in the flink-planner* modules.

This closes #9313.

--- a/flink-table/flink-table-planner-blink/pom.xml
+++ b/flink-table/flink-table-planner-blink/pom.xml
@@ -336,7 +336,7 @@ under the License.
 									<include>commons-codec:commons-codec</include>
 
 									<!-- flink-table-planner-blink dependencies -->
-									<include>org.apache.flink.sql.parser:*</include>
+									<include>org.apache.flink:flink-sql-parser</include>
 
 									<!-- flink-table-runtime-blink dependencies -->
 									<include>org.codehaus.janino:*</include>
