--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ build:
   stage: build
   script:
     # TODO(huweihua): remove skipTests when we can pass unitTest.
-    - mvn clean package -DskipTests --quiet -T 1C
+    - mvn clean package -DskipTests -Pinclude-hadoop
 #  only:
 #    - merge_requests
   tags:
