--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ build:
   stage: build
   script:
     # TODO(huweihua): remove skipTests when we can pass unitTest.
+    - export https_proxy=http://bj-rd-proxy.byted.org:3128
     - mvn clean package -DskipTests -Pinclude-hadoop
 #  only:
 #    - merge_requests
