--- a/flink-dist/src/main/flink-bin/flink_deploy/tools/template/spout.yaml
+++ b/flink-dist/src/main/flink-bin/flink_deploy/tools/template/spout.yaml
@@ -1,4 +1,5 @@
 - spout_name : {{topic_name}}
   args:
-    topic_name : {{topic_name}}
+    kafka_cluster: xxxxxx
+    topic_name : yyyyyy
     partition : 1  #modify to exact partition num
