bugfix: add log when job unique check fails
change default yarn.application-attempt-failures-validity-interval to 1 hour

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -42,6 +42,7 @@ common:
 
   yarn.containers.vcores : 0
   yarn.application-attempts: 5
+  yarn.application-attempt-failures-validity-interval: 3600000
 
   job.work.dir: ${hdfs.prefix}/${clusterName}/1.9/
 
