--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@ under the License.
 		<curator.version>2.12.0</curator.version>
 		<jackson.version>2.9.8</jackson.version>
 		<metrics.version>3.1.5</metrics.version>
+		<metrics4j.version>1.0.24</metrics4j.version>
 		<prometheus.version>0.3.0</prometheus.version>
 		<avro.version>1.8.2</avro.version>
 		<junit.version>4.12</junit.version>
