--- a/flink-runtime-web/pom.xml
+++ b/flink-runtime-web/pom.xml
@@ -243,6 +243,7 @@ under the License.
 							<environmentVariables>
 								<HUSKY_SKIP_INSTALL>true</HUSKY_SKIP_INSTALL>
 							</environmentVariables>
+							<npmRegistryURL>https://registry.npm.taobao.org</npmRegistryURL>
 						</configuration>
 					</execution>
 					<execution>
