--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -58,6 +58,7 @@ under the License.
 		<module>flink-connector-filesystem</module>
 		<module>flink-connector-kafka</module>
 		<module>flink-connector-gcp-pubsub</module>
+		<module>flink-connector-redis</module>
 	</modules>
 
 	<!-- override these root dependencies as 'provided', so they don't end up
