support pb format
Change-Id: I947c9d9a23b4f5b85edacf17850942de3f3c97de

--- a/flink-examples/flink-examples-table/pom.xml
+++ b/flink-examples/flink-examples-table/pom.xml
@@ -292,6 +292,14 @@ under the License.
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-checkstyle-plugin</artifactId>
+				<configuration>
+					<excludes>**/EventProto**</excludes>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
