--- a/flink-connectors/flink-connector-kafka-base/pom.xml
+++ b/flink-connectors/flink-connector-kafka-base/pom.xml
@@ -37,7 +37,10 @@ under the License.
 
 	<!-- Allow users to pass custom connector versions -->
 	<properties>
-		<kafka.version>0.10.2.1</kafka.version>
+		<!-- TODO(zhangguanghui): modify kafka.version to 0.10.1.2,
+		because kafka no 0.10.1.2 release -->
+		<kafka.version>0.10.1.1</kafka.version>
+		<kafka.byted.version>0.10.1.2-bd1.5-SNAPSHOT</kafka.byted.version>
 	</properties>
 
 	<dependencies>
@@ -78,7 +81,7 @@ under the License.
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
 			<artifactId>kafka-clients</artifactId>
-			<version>${kafka.version}</version>
+			<version>${kafka.byted.version}</version>
 		</dependency>
 
 		<!-- test dependencies -->
