support binlog pb format
Change-Id: Id157c0c5cfd456a0ad3b1498084a531585dee84b

--- a/flink-formats/flink-pb/pom.xml
+++ b/flink-formats/flink-pb/pom.xml
@@ -107,7 +107,7 @@ under the License.
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<configuration>
-					<excludes>**/PbDeserializeTest**</excludes>
+					<excludes>**/PbDeserializeTest**,**/CanalEntry**</excludes>
 				</configuration>
 			</plugin>
 		</plugins>
