--- a/flink-dist/src/main/flink-bin/conf/log4j-cli.properties
+++ b/flink-dist/src/main/flink-bin/conf/log4j-cli.properties
@@ -41,3 +41,7 @@ log4j.logger.org.apache.hadoop.util.NativeCodeLoader=OFF
 
 # suppress the irrelevant (wrong) warnings from the netty channel handler
 log4j.logger.org.jboss.netty.channel.DefaultChannelPipeline=ERROR, console
+
+# suppress the hdfs FastFailOverStrategy retry INFO.
+log4j.logger.org.apache.hadoop.hdfs.DFSClient=WARN, console
+log4j.logger.org.apache.hadoop.hdfs.pipeline.FastFailoverStrategy=WARN, console
