--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -254,7 +254,7 @@ boe:
   clusterName: boe
   high-availability.zookeeper.quorum: 10.225.33.2:2181,10.225.28.3:2181,10.225.33.6:2181,10.225.125.22:2181,10.225.125.29:2181
   hdfs.prefix: hdfs://westeros/flink_boe
-  dataSource: boe
+  dataSource: bytetsd_boe
   kafka_server_url: http://kafka-config.byted.org
   log4j.appender.databus.channel: yarn_container_level_log
   # TODO(zhangguanghui): Waiting for Yaop to replace it with a domain url
@@ -265,7 +265,7 @@ cof:
   clusterName: cof
   high-availability.zookeeper.quorum: 10.225.33.2:2181,10.225.28.3:2181,10.225.33.6:2181,10.225.125.22:2181,10.225.125.29:2181
   hdfs.prefix: hdfs://westeros/flink_cof
-  dataSource: cof
+  dataSource: bytetsd_cof
   kafka_server_url: http://kafka-config.byted.org
   log4j.appender.databus.channel: yarn_container_level_log
   # TODO(zhangguanghui): Waiting for Yaop to replace it with a domain url
