--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -119,6 +119,9 @@ common:
   yarn.gang-scheduler.wait-time-before-fatal-ms: 300000
   yarn.gang-scheduler.wait-time-before-retry-ms: 1000
 
+  # Configurations for dfs
+  dfs.client.block.write.retries: 10
+
 flink:
   dc: cn
   clusterName: flink
