[INFOI-4632] [Flink] [1.9] 大作业启动时 client 和 JM akka 心跳超时导致提交作业失败

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -110,6 +110,8 @@ common:
   nmclientasync.enabled: true
   taskmanager.initial-on-start: false
   taskmanager.network.netty.client.readTimeout.enabled: true
+  resourcemanager.taskmanager-timeout: 900000
+  slot.request.timeout: 900000
 
   # Gang scheduler
   yarn.gang-scheduler.enable: false
