--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -23,7 +23,7 @@ common:
   taskmanager.tmp.dirs: /opt/tmp/flink
   state.backend: rocksdb
   state.checkpoints.dir: ${hdfs.prefix}/${dc}/${clusterName}/1.9/flink/fs_checkpoint_dir
-  state.backend.rocksdb.localdir: /opt/tmp/flink-dev/flink-rocksdb-local
+#  state.backend.rocksdb.localdir: /opt/tmp/flink-dev/flink-rocksdb-local
   taskmanager.network.memory.fraction: 0.3
   taskmanager.network.memory.max: 2147483648
 
