[INFOI-5049][Flink] [1.9] NMClientAsync 启动 container 后 Token 过期不更新

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -107,7 +107,7 @@ common:
   docker.hub: hub.byted.org
   docker.region: China-North-LF
 
-  nmclientasync.enabled: true
+  nmclientasync.enabled: false
   taskmanager.initial-on-start: false
   taskmanager.network.netty.client.readTimeout.enabled: true
   resourcemanager.taskmanager-timeout: 900000
