add gc log rotate & support truncate stdout/stderr
Change-Id: I1dfeb1692b17ce976347311a69b9657e5e4b2bdd

--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -121,6 +121,9 @@ common:
   yarn.gang-scheduler.wait-time-before-fatal-ms: 300000
   yarn.gang-scheduler.wait-time-before-retry-ms: 1000
 
+  # GC log options
+  flink.gc.log.opts: -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=100M
+
 flink:
   dc: cn
   clusterName: flink
