--- a/flink-connectors/pom.xml
+++ b/flink-connectors/pom.xml
@@ -60,6 +60,7 @@ under the License.
 		<module>flink-connector-gcp-pubsub</module>
 		<module>flink-connector-redis</module>
 		<module>flink-connector-clickhouse</module>
+		<module>flink-connector-print</module>
 	</modules>
 
 	<!-- override these root dependencies as 'provided', so they don't end up
