--- a/flink-dist/src/main/resources/flink-conf.yaml
+++ b/flink-dist/src/main/resources/flink-conf.yaml
@@ -19,8 +19,8 @@
 common:
   taskmanager.memory.preallocate: false
   parallelism.default: 1
-  io.tmp.dirs: /opt/tmp/flink
-  taskmanager.tmp.dirs: /opt/tmp/flink
+#  io.tmp.dirs: /opt/tmp/flink
+#  taskmanager.tmp.dirs: /opt/tmp/flink
   state.backend: rocksdb
   state.checkpoints.dir: ${hdfs.prefix}/${dc}/${clusterName}/1.9/flink/fs_checkpoint_dir
 #  state.backend.rocksdb.localdir: /opt/tmp/flink-dev/flink-rocksdb-local
