--- a/flink-connectors/flink-jdbc/pom.xml
+++ b/flink-connectors/flink-jdbc/pom.xml
@@ -39,7 +39,7 @@ under the License.
 		<dependency>
 			<groupId>com.bytedance</groupId>
 			<artifactId>mysql</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.2.4-RELEASE</version>
 		</dependency>
 		<!-- Table ecosystem -->
 		<!-- Projects depending on this project won't depend on flink-table-*. -->
