--- a/flink-formats/flink-pb/pom.xml
+++ b/flink-formats/flink-pb/pom.xml
@@ -93,24 +93,24 @@ under the License.
 		<!-- Create SQL Client uber jars by default -->
 		<profile>
 			<id>sql-jars</id>
-			<activation>
-				<property>
-					<name>!skipSqlJars</name>
-				</property>
-			</activation>
 			<build>
 				<plugins>
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-jar-plugin</artifactId>
+						<artifactId>maven-shade-plugin</artifactId>
 						<executions>
 							<execution>
+								<id>shade-flink</id>
 								<phase>package</phase>
 								<goals>
-									<goal>jar</goal>
+									<goal>shade</goal>
 								</goals>
 								<configuration>
-									<classifier>sql-jar</classifier>
+									<artifactSet>
+										<includes>
+											<include>*:*</include>
+										</includes>
+									</artifactSet>
 								</configuration>
 							</execution>
 						</executions>
