[INFOI-5336] rename com.bytedance.kvclient

--- a/flink-connectors/flink-connector-redis/pom.xml
+++ b/flink-connectors/flink-connector-redis/pom.xml
@@ -99,6 +99,12 @@ under the License.
 											<include>*:*</include>
 										</includes>
 									</artifactSet>
+									<relocations>
+										<relocation>
+											<pattern>com.bytedance</pattern>
+											<shadedPattern>org.apache.flink.redis.shaded.com.bytedance</shadedPattern>
+										</relocation>
+									</relocations>
 								</configuration>
 							</execution>
 						</executions>
